# SpoutJitter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  spout-patch.diff
Spout/: README.md  package-info.json
Spout/extras/: Spout.maxpat
Spout/help/: jit.gl.spoutreceiver.maxhelp  jit.gl.spoutsender.maxhelp
